Improve hill climber adaptation at small cache sizes
Small caches (≤512 entries) had three convergence issues: the climber's
initial shrink was a no-op when the window was already tiny, locking it
into a direction that never flipped; the step decayed too fast for HR
shifts to trigger restarts on workload transitions; and very small caches
had initial steps too small to move the integer window.

- Start by growing the window at small caches (positive initial step)
- Slow the step decay rate from 0.98 to 0.995 per sample
- Floor the initial step at 2 entries
- Floor the frequency sketch size